--- a/evaluate.html
+++ b/evaluate.html
@@ -204,7 +204,7 @@
         </div>
         <div class="row-form">
             <div class="col-form">
-                <form action="evaluate.php" method="post">
+                <form action="https://formspree.io/f/xwpovlje" method="post">
                     <h3>Leave message for adding more</h3>
                     <label>Name:</label>
                     <input type="text" name="name"
