--- a/evaluate.html
+++ b/evaluate.html
@@ -204,16 +204,16 @@
         </div>
         <div class="row-form">
             <div class="col-form">
-                <form action="https://formspree.io/f/xwpovlje" method="post">
+                <form action="https://formspree.io/f/xwpovlje" method="POST">
                     <h3>Leave message for adding more</h3>
                     <label>Name:</label>
-                    <input type="text" name="name"
-                        placeholder="Enter your name                                                                                                                                                                                                                                                                (Optional)">
+                    <input type="text" name="Name"
+                        placeholder="Enter your name">                                                                                                                                                                                                                                                               (Optional)">
                     <label>Email:</label>
-                    <input type="email" name="email"
+                    <input type="email" name="E-mail"
                         placeholder="Enter your name                                                                                                                                                                                                                                                                 (Optional)">
                     <label> Message:</label>
-                    <textarea required placeholder="Write your message here..." name="message" style="background: linear-gradient(135deg, rgba(255, 255, 255, 0.1));
+                    <textarea required placeholder="Write your message here..." name="Message" style="background: linear-gradient(135deg, rgba(255, 255, 255, 0.1));
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);"></textarea>
                     <button type="submit">Submit</button>
