--- a/evaluate.html
+++ b/evaluate.html
@@ -211,7 +211,7 @@
                         placeholder="Enter your name">                                                                                                                                                                                                                                                               (Optional)">
                     <label>Email:</label>
                     <input type="email" name="E-mail"
-                        placeholder="Enter your name                                                                                                                                                                                                                                                                 (Optional)">
+                        placeholder="Enter your name">                                                                                                                                                                                                                                                                (Optional)">
                     <label> Message:</label>
                     <textarea required placeholder="Write your message here..." name="Message" style="background: linear-gradient(135deg, rgba(255, 255, 255, 0.1));
     backdrop-filter: blur(10px);
