--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
                     <h3>Leave message for adding more</h3>
                     <label>Name:</label>
                     <input type="text" name="Name"
-                        placeholder="Enter your name">                                                                                                                                                                                                                                                            (Optional)">
+                        placeholder="Enter your name                                                                                                                                                                                                                                                             (Optional)">
                     <label>Email:</label>
                     <input type="email" name="E-mail"
-                        placeholder="Enter your name">                                                                                                                                                                                                                                                                (Optional)">
+                        placeholder="Enter your name                                                                                                                                                                                                                                                                (Optional)">
                     <label> Message:</label>
                     <textarea required placeholder="Write your message here..." name="Message" style="background: linear-gradient(135deg, rgba(255, 255, 255, 0.1));
     backdrop-filter: blur(10px);
